# arcade-chess

./: .dockerignore  .gitignore  LICENSE  README.md  captain-definition
chess-clock/: platformio.ini
chess-clock/src/: main.cpp
docs/: avr-ota.typ  board.typ  bringup.md  client-api.md  firmware-architecture.md  firmware-plan.md  main.typ  project-overview.typ  serial-protocol.typ  uart-api.md  websocket-api.md
firmware-atmega/: platformio.ini
firmware-atmega/bootloader/: README.md  arcade-chess-urboot.hex  urboot-arcade.patch
firmware-atmega/include/: application.h  firmware_update.h  lighting.h  persistent.h  protocol_service.h  sensors.h  system_info.h
firmware-atmega/provisioning/: platformio.ini
firmware-atmega/src/: application.cpp  bootloader_handoff.h  bringup_config.h  diagnostics.cpp  diagnostics.h  fastled_atmega328pb.h  firmware_update.cpp  firmware_update.h  lighting.cpp  lighting.h  main.cpp  persistent.cpp  persistent.h  protocol_service.cpp  protocol_service.h  sensors.cpp  sensors.h  system_info.cpp
firmware-esp/: platformio.ini
firmware-esp/include/: app_config.h  bus_manager.h  network_manager.h
firmware-esp/src/: app_config.cpp  app_config.h  avr_flasher.cpp  avr_flasher.h  board_mapping.cpp  bus_manager.cpp  bus_manager.h  (+7 more)
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts  wrangler.jsonc
protocol/: README.md  library.json
server/: Cargo.toml  Dockerfile  README.md
server/src/: client.rs  device.rs  main.rs  state.rs
tools/: flash-quadrant.py  make-quadrant-eeprom.py  pio-targets.py  provision-quadrant.sh
(+11 files in other folders)
