[package]
name = "arcade-chess-server"
version = "0.1.0"
edition = "2021"
description = "Bring-up bridge server: relays ESP32 board events to browser clients over WebSocket."
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
